# dactyloglyphomancy

./: Cargo.toml  emoji-no-skintone-no-flags.txt  nonstops.txt  readme.md  xheight.txt
src/: main.rs
