[package]
name = "dactyloglyphomancy"
version = "0.1.0"
authors = ["lsb <leebutterman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
slurp = "1.0.1"
sha2 = "0.9.5"
core_affinity = "0.5.10"
itertools = "0.10.0"
rand = "0.8.0"

[profile.release]
opt-level = 3
